# skunk-mimic

./: .gitignore  .gitmodules  CLAUDE.md  HowToSocketcan.md  LICENSE  NOTICE  README.md  README_ARCH.md  can_setup.bash  dataflow.yaml  dataflow_foctive_control.yaml  dataflow_foctive_web_control.yaml  dataflow_imu_noise.yaml  dataflow_sim.yaml  dataflow_sim_sysid.yaml  dataflow_sysid.yaml  dora_rt_damon.bash  keep_serial_open.bash  start_rt.sh  vcan_setup.bash
docs/: dora-upgrade.md  rt-enable.md  web_gui_260710.md
robot_config/: foctive_motor_test.json  mimic_v2.json  single_axis_test.json  zenoh_robot.json5
scripts/: pyproject.toml
scripts/calc_ab_matrix/: A.csv  A_3dof.csv  A_vel.csv  B.csv  B_3dof.csv  B_vel.csv  calc_model_2dof_lagrange.py  calc_model_3dof_lagrange.py  pyproject.toml
scripts/calc_lqr_gain/: lqrGain.csv  main.py  pyproject.toml
scripts/lib/: model_loader.py  three_com_model_crate.py
sim/: mimic_v2.xml  mimic_v2_sysid.xml
sim/meshes/: base_link.stl  lower_link_L.stl  lower_link_R.stl  upper_link_L.stl  upper_link_R.stl  wheel_L.stl  wheel_R.stl
src/: can_setup.bash  dataflow.yaml
src/cpp/: CMakeLists.txt
src/cpp/controller/: angle_pid_controller.cpp  angle_pid_controller.hpp  lqr_controller.cpp  lqr_controller.hpp
src/cpp/driver/: dummy_comm.cpp  dummy_comm.hpp  dummy_driver.cpp  dummy_driver.hpp  foctive_can_driver.cpp  foctive_can_driver.hpp  moteus_can_driver.cpp  moteus_can_driver.hpp  moteus_converter.cpp  moteus_converter.hpp  socket_can_comm.cpp  socket_can_comm.hpp  socket_can_comm.md  spresense_imu.cpp  spresense_imu.hpp
src/cpp/interface/: communication.hpp  controller.hpp  imu_sensor.hpp  motor_driver.hpp  sensor_input.hpp
src/cpp/lib/: data_format_generated.hpp  dora_helpers.hpp  enum_def.hpp  foctive_param_data.hpp  foctive_protocol.hpp  lpf.hpp  moteus_fault.hpp  pid.hpp  robot_config.cpp  robot_config.hpp  robot_config_test.cpp  sensor_data_format.hpp  shm_data_format.hpp
src/cpp/node/can_backend/: CMakeLists.txt  main.cpp
src/cpp/node/dcm_frontend/: CMakeLists.txt  main.cpp
src/cpp/node/device_control/: CMakeLists.txt  main.cpp
src/cpp/node/device_control_manager/: CMakeLists.txt  main.cpp
src/cpp/node/device_manage/: CMakeLists.txt  main.cpp
src/cpp/node/dummy/: CMakeLists.txt  dummy.cpp
src/cpp/node/dummy2/: CMakeLists.txt  dummy2.cpp
src/cpp/node/imu_node/: CMakeLists.txt  main.cpp
src/cpp/node/motor_comm/: CMakeLists.txt  main.cpp
src/cpp/node/robot_control_manager/: CMakeLists.txt  README.md  main.cpp  robot_control_manager.cpp  robot_control_manager.hpp  test_robot_control_manager.cpp
src/cpp/node/stabilizer/: CMakeLists.txt  angle_pid_controller.cpp  angle_pid_controller.hpp  body_state_ekf.cpp  body_state_ekf.hpp  controller.hpp  lqr_controller.cpp  lqr_controller.hpp  main.cpp
src/cpp/node/state_manage/: CMakeLists.txt  main.cpp  state_machine.cpp  state_machine.hpp  test_state_machine.cpp
src/data_format/: axis_data.json  sensor_data.json
src/python/: pyproject.toml
src/python/auto_input/: auto_input.py
src/python/data_recorder/: data_recorder.py  pyproject.toml
src/python/data_viewer/: data_viewer.py  main.py  pyproject.toml
src/python/dummy_input/: dummy_input.py  main.py  pyproject.toml
src/python/foctive_controller/: foctive_controller.py
src/python/imu_noise_meas/: imu_noise_meas.py
src/python/lib/: __init__.py  data_format.py  robot_config.py  sensor_data_format.py
src/python/mujoco_backend/: main.py  mujoco_backend.py  pyproject.toml
src/python/mujoco_node/: mujoco_node.py  pyproject.toml
src/python/rerun_logger/: pyproject.toml  rerun_logger.py
src/python/sysid/: convert_recording.py  define_params.py  optimize.py  validate.py
src/python/sysid_controller/: pyproject.toml  sysid_controller.py
src/python/sysid_input/: pyproject.toml  sysid_input.py
src/python/web_controller/: README.md  web_controller.html  web_controller.py
src/robot_config/: mimic_v2.json
sysid/data/: sysid_20260308_232610.npz
sysid/results/: sysid_result.json
tools/: gen_data_format.py  motor_bridge.py  web_monitor.html
tools/gui/: README.md  pyproject.toml  web_monitor.html  web_monitor.py
