[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dora-rs==0.4.1",
    "pyarrow>=23.0.1",
    "rich>=14.3.3",
    "mujoco>=3.0.0",
    "numpy",
    "colorama>=0.4.6",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
    "pyyaml>=6.0.3",
    "tabulate>=0.10.0",
    "jinja2>=3.1.6",
    "plotly>=6.6.0",
    "rerun-sdk>=0.31.2",
]
[tool.uv.workspace]
members = ["dummy_input", "data_viewer", "mujoco_node", "sysid_controller", "data_recorder", "rerun_logger"]
